Bunch of small cleanups and moving the GP over to the new deserialisation cache world.